# Kontakt
&nbsp;

Dir ZS PG MIKT

Platz der Luftbrücke 6,

12101 Berlin

&nbsp;
# Rollen und Rechte
24225001 = User, <br>
24225002 = Administration, <br>
24225003 = Leitung, <br>
24225004 = Controlling, <br>
24225005 = Service <br>
Kennwort: 'Abc123!'

&nbsp;
# Änderungen

## <u>0.9.2x003</u>
<ul>
    <li>- Aufnahme von Tooltips</li>
    <li>- 'matMenu' als DropdownModule von Angular Materials</li>
    <li>- Modularisierung des Sprachpaketes i18n</li>
</ul>
&nbsp;