@@ -108,7 +108,7 @@
       <div class="px-3 mt-6">
         <div class="hover:bg-blue-600 text-gray-600 hover:text-white py-2 px-3 rounded flex items-center mt-4 cursor-pointer" (click)="logout()">
           <icons class="w-8 h-8 stroke-1 stroke-current" name="logout"></icons>
-          <p class="text-sm ml-3 leading-none">Logout</p>
+          <p class="text-sm ml-3 leading-none">Abmelden</p>
         </div>
       </div>
     </div>
