@@ -31,5 +31,5 @@
   </div>
 </div>
 <div class="absolute flex flex-row justify-end h-8 w-full bottom-0 z-30">
-  <div class="mr-3 text-sm cursor-pointer" (click)="openChangeLogModal()">Aktualisierung 22.02.2022</div>
+  <div class="mr-3 text-sm cursor-pointer" (click)="openChangeLogModal()">Aktualisierung 10.03.2022</div>
 </div>
