@@ -9,7 +9,7 @@
         <div class="w-full mb-8 sm:mb-0 mr-0 sm:mr-8 rounded bg-white dark:bg-gray-800 shadow">
             <div class="w-full h-64 border-b border-gray-400 dark:border-gray-600 rounded-t">
                 <h2 class="mb-3 font-bold text-xl">Verteilung von Typen</h2>
-                <div style="display: block">
+                <!-- <div style="display: block">
                     <canvas baseChart
                       [data]="barChartData"
                       [options]="barChartOptions"
@@ -18,7 +18,7 @@
                       (chartHover)="chartHovered($event)"
                       (chartClick)="chartClicked($event)">
                     </canvas>
-                </div>
+                </div> -->
             </div>
             <div class="w-full h-24 bg-gray-100 dark:bg-gray-700 rounded-b">
 
