@@ -26,3 +26,4 @@ node_modules/
 /platforms/
 
 /www/
+polizei_android_keystore.keystore
