@@ -18,6 +18,13 @@ Kennwort: 'Abc123!'
 
 &nbsp;
 # Änderungen
+## <u>1.0.0x001</u>
+<ul>
+    <li>- Logout -> Abmelden</li>
+    <li>- Umlaute - test der Kodierung</li>
+    <li>- XMLHttp-Interceptor aufgenommen</li>
+</ul>
+&nbsp;
 
 ## <u>0.9.2x003</u>
 <ul>
